--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="toast_auth_failed">Auth failed</string>
     <string name="action_sign_out">Sign out</string>
     <string name="action_refresh">Refresh</string>
+    <string name="participants"><![CDATA[Participants: <click here to add>]]></string>
 
     <string-array name="prior_list">
         <item>ASAP</item>
